--- a/package.json
+++ b/package.json
@@ -11,22 +11,25 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
     "compression": "^1.7.4",
     "config": "^3.3.7",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
+    "date-fns": "^2.28.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-async-errors": "^3.1.1",
-    "fawn": "^2.1.5",
     "helmet": "^5.0.2",
     "joi": "^17.6.0",
     "joi-objectid": "^4.0.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.3",
     "mongoose": "^6.2.7",
     "pino": "^7.9.2",
     "pino-http": "^6.6.0",
+    "run-rs": "^0.7.6",
     "winston": "^3.7.2",
     "winston-mongodb": "^5.0.7"
   }
